sntp y tolerancia a fallos- not tested

--- a/components/sntp_sync/CMakeLists.txt
+++ b/components/sntp_sync/CMakeLists.txt
@@ -1,5 +1,5 @@
-# wifi_manager/CMakeLists.txt
-
-idf_component_register(SRCS "src/ota.c"
-                       INCLUDE_DIRS "include"
-                       REQUIRES  )
+idf_component_register(
+    SRCS "src/sntp_sync.c"
+    INCLUDE_DIRS "include"
+    REQUIRES nvs_flash esp_event esp_netif esp_sntp
+)
