--- a/components/wifi/CMakeLists.txt
+++ b/components/wifi/CMakeLists.txt
@@ -1,5 +1,3 @@
-# wifi_manager/CMakeLists.txt
-
 idf_component_register(SRCS "src/wifi.c"
                        INCLUDE_DIRS "include"
-                       REQUIRES esp_wifi nvs_flash)
+                       REQUIRES esp_wifi esp_event nvs_flash esp_netif)
