Primera version de MQTT con ThingsBoard

--- a/components/mqtt/CMakeLists.txt
+++ b/components/mqtt/CMakeLists.txt
@@ -1,5 +1,5 @@
 # wifi_manager/CMakeLists.txt
 
-idf_component_register(SRCS "src/mqtt.c"
+idf_component_register(SRCS "mqtt.c" "src/mqtt.c"
                        INCLUDE_DIRS "include"
                        REQUIRES  )
