--- a/components/mqtt/CMakeLists.txt
+++ b/components/mqtt/CMakeLists.txt
@@ -1,3 +1,4 @@
+message("Include directories: ${INCLUDE_DIRS}")
 idf_component_register(SRCS "mqtt.c"
                        INCLUDE_DIRS "include"
-                       REQUIRES esp_event json mqtt)
+                       REQUIRES mqtt esp_partition nvs_flash esp_netif app_update json)
