Ultimos cambios para que compile

--- a/components/mqtt_controller/CMakeLists.txt
+++ b/components/mqtt_controller/CMakeLists.txt
@@ -1,4 +1,3 @@
-message("Include directories: ${INCLUDE_DIRS}")
-idf_component_register(SRCS "mqtt.c"
+idf_component_register(SRCS "mqtt_controller.c"
                        INCLUDE_DIRS "include"
                        REQUIRES mqtt esp_partition nvs_flash esp_netif app_update json)
