--- a/components/nvs_structures/CMakeLists.txt
+++ b/components/nvs_structures/CMakeLists.txt
@@ -1,3 +1,3 @@
 idf_component_register(SRCS "nvs_structures.c"
     INCLUDE_DIRS "include"
-    REQUIRES esp_event esp_timer nvs_flash sgp30)
+    REQUIRES esp_event esp_timer nvs_flash sgp30 nvs_structures softAP_provision)
