--- a/components/softAP_provision/CMakeLists.txt
+++ b/components/softAP_provision/CMakeLists.txt
@@ -1,3 +1,3 @@
 idf_component_register(SRCS "softAP_provision.c"
     INCLUDE_DIRS "include"
-    REQUIRES esp_wifi nvs_flash wifi_provisioning)
+    REQUIRES esp_wifi nvs_flash wifi_provisioning esp_event)
