--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,3 +6,7 @@ cmake_minimum_required(VERSION 3.5)
 
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
 project(ProjectoFinalGrupo5)
+
+target_add_binary_data(${CMAKE_PROJECT_NAME}.elf "components/mqtt_controller/server.pem" TEXT)
+target_add_binary_data(${CMAKE_PROJECT_NAME}.elf "components/mqtt_controller/chain.pem" TEXT)
+target_add_binary_data(${CMAKE_PROJECT_NAME}.elf "components/mqtt_controller/deviceKey.pem" TEXT)
