attempting to fix size issues

--- a/components/mqtt_controller/CMakeLists.txt
+++ b/components/mqtt_controller/CMakeLists.txt
@@ -1,3 +1,3 @@
 idf_component_register(SRCS "mqtt_controller.c"
                        INCLUDE_DIRS "include"
-                       REQUIRES mqtt esp_partition nvs_flash esp_netif app_update json)
+                       REQUIRES mqtt json)
