--- a/components/sgp30/CMakeLists.txt
+++ b/components/sgp30/CMakeLists.txt
@@ -1,4 +1,3 @@
 idf_component_register(SRCS "sgp30.c"
     INCLUDE_DIRS "include"
-    REQUIRES esp_event esp_timer esp_driver_i2c nvs_flash nvs_structures
-    PRIV_REQUIRES esp_driver_i2c)
+    REQUIRES esp_event esp_timer esp_driver_i2c)
